WireGuard/wireguard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  labels:
    app: wireguard
spec:
  selector:
    app: wireguard
  ports:
    - name: "51820"
      port: 51820
      protocol: UDP
      targetPort: 51820
