WireGuard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wireguard.helo-k8s.fun
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wireguard
            port:
              number: 51820
